--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
 <body>
 <center><img src="images/logo.jpg" align="bottom" height="250" width="400"></center>
 
-<h1> Some Title </h1>
-<a href="about.html"> link to about</a>
+<h1> about </h2>
 
 </body>
 
