added link to history

--- a/webpage.html
+++ b/webpage.html
@@ -7,8 +7,8 @@
 <center><img src="images/logo.jpg" align="bottom" height="250" width="400"></center>
 
 <h1> Some Title </h1>
-<a href="about.html"> link to about</a>
-
+<a href="about.html"> link to about</a> <br />
+<a href="history.html"> link to history</a>
 </body>
 
 </html>
